--- a/index.html
+++ b/index.html
@@ -273,14 +273,15 @@
                 <h1>Connect with Us</h1>
                <div class="div">
                        <div>
-                         <input style="padding: 15px; width: 70%;" type="Name" value="" placeholder="Name" required>
+                         <input style="padding: 15px; width: 80%;
+                         border: none; border-radius:10px;" type="Name" value="" placeholder="Name" required>
                        </div>
                       
                         <div>
-                            <input style="padding: 15px; width: 70%;" type="Name" value="" placeholder="Name" required>
+                            <input style="padding: 15px; width: 80%; border: none; border-radius:10px" type="Name" value="" placeholder="Name" required>
                         </div>
                         <div>
-                         <input style="padding: 35px; width: 70%;" type="text" id="" placeholder="Message" required>
+                         <textarea style="padding: 15px; width: 80%; border: none; border-radius:10px" type="text" id="" rows="5" placeholder="Message" required></textarea>
                         </div>
                         <div>
                             <button class="foot-btn">Send Message</button>
@@ -289,7 +290,7 @@
             </div>
         </div>
         <div class="div-last">
-            <p>Copyright Espresso Emporium ! All Rights Reserved</p>
+            <p style="text-align: center; width:100%;">Copyright Espresso Emporium ! All Rights Reserved</p>
         </div>
       </div>
 </body>
